@@ -6,7 +6,7 @@
 .Nd read, transform, and write RDF data
 .Sh SYNOPSIS
 .Nm serdi
-.Op Fl abefhlmqtvx
+.Op Fl Cabefhlmqtvx
 .Op Fl I Ar base
 .Op Fl V Ar checks
 .Op Fl X Ar checks
@@ -37,6 +37,18 @@ or transform URIs and blank node IDs.
 The options are as follows:
 .Pp
 .Bl -tag -compact -width 3n
+.It Fl C
+Convert literals to canonical form.
+Literals with supported XSD datatypes will be parsed and rewritten canonically.
+All numeric datatypes are supported, as well as
+.Vt boolean ,
+.Vt duration ,
+.Vt datetime ,
+.Vt time ,
+.Vt hexBinary ,
+and
+.Vt base64Binary .
+.Pp
 .It Fl I Ar base
 Input base URI.
 Relative URI references in the input will be resolved against this.
