@@ -40,7 +40,7 @@ typedef struct {
 static SerdNode*
 serd_new_from_uri(SerdURIView uri, SerdURIView base);
 
-static size_t
+size_t
 serd_node_pad_size(const size_t n_bytes)
 {
   const size_t pad  = sizeof(SerdNode) - (n_bytes + 2) % sizeof(SerdNode);
