@@ -55,6 +55,7 @@ print_usage(const char* const name, const bool error)
   fprintf(os, "Usage: %s [OPTION]... INPUT...\n", name);
   fprintf(os, "Read and write RDF syntax.\n");
   fprintf(os, "Use - for INPUT to read from standard input.\n\n");
+  fprintf(os, "  -C           Convert literals to canonical form.\n");
   fprintf(os, "  -I BASE_URI  Input base URI.\n");
   fprintf(os, "  -V CHECKS    Validate with checks matching CHECKS.\n");
   fprintf(os, "  -X CHECKS    Exclude validation checks matching CHECKS.\n");
@@ -154,6 +155,7 @@ main(int argc, char** argv)
   bool            osyntax_set   = false;
   bool            validate      = false;
   bool            use_model     = false;
+  bool            canonical     = false;
   bool            quiet         = false;
   size_t          stack_size    = 4194304;
   const char*     input_string  = NULL;
@@ -170,7 +172,9 @@ main(int argc, char** argv)
     for (int o = 1; argv[a][o]; ++o) {
       const char opt = argv[a][o];
 
-      if (opt == 'a') {
+      if (opt == 'C') {
+        canonical = true;
+      } else if (opt == 'a') {
         writer_flags |= SERD_WRITE_ASCII;
       } else if (opt == 'b') {
         bulk_write = true;
@@ -347,7 +351,7 @@ main(int argc, char** argv)
 
   SerdModel*      model    = NULL;
   SerdSink*       inserter = NULL;
-  const SerdSink* sink     = NULL;
+  const SerdSink* out_sink = NULL;
   if (use_model) {
     const SerdModelFlags flags =
       SERD_INDEX_SPO | (input_has_graphs ? SERD_INDEX_GRAPHS : 0u) |
@@ -356,9 +360,16 @@ main(int argc, char** argv)
 
     model    = serd_model_new(world, flags);
     inserter = serd_inserter_new(model, NULL);
-    sink     = inserter;
+    out_sink = inserter;
   } else {
-    sink = serd_writer_sink(writer);
+    out_sink = serd_writer_sink(writer);
+  }
+
+  const SerdSink* sink = out_sink;
+
+  SerdSink* canon = NULL;
+  if (canonical) {
+    sink = canon = serd_canon_new(world, out_sink, reader_flags);
   }
 
   if (quiet) {
@@ -464,6 +475,7 @@ main(int argc, char** argv)
     serd_validator_free(validator);
   }
 
+  serd_sink_free(canon);
   serd_sink_free(inserter);
   serd_model_free(model);
   serd_writer_free(writer);
