@@ -1,0 +1,60 @@
+@prefix mf: <http://www.w3.org/2001/sw/DataAccess/tests/test-manifest#> .
+@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
+@prefix rdft: <http://www.w3.org/ns/rdftest#> .
+
+<>
+	rdf:type mf:Manifest ;
+	rdfs:comment "Serd normalisation test cases" ;
+	mf:entries (
+		<#bad-boolean>
+		<#bad-decimal-leading>
+		<#bad-decimal-trailing>
+		<#bad-empty-boolean>
+		<#bad-integer-leading>
+		<#bad-integer-trailing>
+		<#test-canon>
+	) .
+
+<#bad-boolean>
+	rdf:type rdft:TestTurtleNegativeEval ;
+	mf:name "bad-boolean" ;
+	rdfs:comment "Invalid xsd::boolean syntax" ;
+	mf:action <bad-boolean.ttl> .
+
+<#bad-decimal-leading>
+	rdf:type rdft:TestTurtleNegativeEval ;
+	mf:name "bad-decimal-leading" ;
+	rdfs:comment "Invalid xsd::decimal syntax (leading garbage)" ;
+	mf:action <bad-decimal-leading.ttl> .
+
+<#bad-decimal-trailing>
+	rdf:type rdft:TestTurtleNegativeEval ;
+	mf:name "bad-decimal-trailing" ;
+	rdfs:comment "Invalid xsd::decimal syntax (trailing garbage)" ;
+	mf:action <bad-decimal-trailing.ttl> .
+
+<#bad-empty-boolean>
+	rdf:type rdft:TestTurtleNegativeEval ;
+	mf:name "bad-empty-boolean" ;
+	rdfs:comment "Invalid xsd::boolean syntax (no value)" ;
+	mf:action <bad-empty-boolean.ttl> .
+
+<#bad-integer-leading>
+	rdf:type rdft:TestTurtleNegativeEval ;
+	mf:name "bad-integer-leading" ;
+	rdfs:comment "Invalid xsd::integer syntax (leading garbage)" ;
+	mf:action <bad-integer-leading.ttl> .
+
+<#bad-integer-trailing>
+	rdf:type rdft:TestTurtleNegativeEval ;
+	mf:name "bad-integer-trailing" ;
+	rdfs:comment "Invalid xsd::integer syntax (trailing garbage)" ;
+	mf:action <bad-integer-trailing.ttl> .
+
+<#test-canon>
+	rdf:type rdft:TestTurtleEval ;
+	mf:name "test-canon" ;
+	mf:action <test-canon.ttl> ;
+	mf:result <test-canon.nt> .
+
