@@ -1,0 +1,75 @@
+@base <http://example.org/> .
+@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
+
+[
+	<boolean> " false "^^xsd:boolean ,
+		" 0 "^^xsd:boolean ,
+		" true "^^xsd:boolean ,
+		" 1 "^^xsd:boolean ;
+	<ieee754> " +0100.0 "^^xsd:float ,
+		" -0100.0 "^^xsd:float ,
+		" +01000.0 "^^xsd:double ,
+		" -01000.0 "^^xsd:double ;
+	<machine> " +09223372036854775807 "^^xsd:long ,
+		" -09223372036854775808 "^^xsd:long ,
+		" +02147483647 "^^xsd:int ,
+		" -02147483648 "^^xsd:int ,
+		" +032767 "^^xsd:short ,
+		" -032768 "^^xsd:short ,
+		" +0127 "^^xsd:byte ,
+		" -0128 "^^xsd:byte ,
+		" 01 "^^xsd:unsignedLong ,
+		" 018446744073709551615 "^^xsd:unsignedLong ,
+		" 01 "^^xsd:unsignedInt ,
+		" 04294967295 "^^xsd:unsignedInt ,
+		" 01 "^^xsd:unsignedShort ,
+		" 065535 "^^xsd:unsignedShort ,
+		" 01 "^^xsd:unsignedByte ,
+		" 0255 "^^xsd:unsignedByte ;
+	<decimal> " 00 "^^xsd:decimal ,
+		" +0 "^^xsd:decimal ,
+		" -0 "^^xsd:decimal ,
+		" 36893488147419103232 "^^xsd:decimal ,
+		" 0036893488147419103232 "^^xsd:decimal ,
+		" +36893488147419103232 "^^xsd:decimal ,
+		" +0036893488147419103232 "^^xsd:decimal ,
+		" +0036893488147419103232. "^^xsd:decimal ,
+		" +0036893488147419103232.00 "^^xsd:decimal ,
+		" +0036893488147419103232.12300 "^^xsd:decimal ,
+		" -36893488147419103232 "^^xsd:decimal ,
+		" -0036893488147419103232 "^^xsd:decimal ,
+		" -0036893488147419103232. "^^xsd:decimal ,
+		" -0036893488147419103232.00 "^^xsd:decimal ,
+		" -0036893488147419103232.12300 "^^xsd:decimal ,
+		" 00.12300 "^^xsd:decimal ,
+		" .12300 "^^xsd:decimal ,
+		" +.12300 "^^xsd:decimal ,
+		" +00.12300 "^^xsd:decimal ,
+		" -.12300 "^^xsd:decimal ,
+		" -00.12300 "^^xsd:decimal ;
+	<integer> " 36893488147419103232 "^^xsd:integer ,
+		" 0036893488147419103232 "^^xsd:integer ,
+		" +36893488147419103232 "^^xsd:integer ,
+		" +0036893488147419103232 "^^xsd:integer ,
+		" -36893488147419103232 "^^xsd:integer ,
+		" -0036893488147419103232 "^^xsd:integer ,
+		" 00 "^^xsd:nonPositiveInteger ,
+		" -036893488147419103232 "^^xsd:nonPositiveInteger ,
+		" -01 "^^xsd:negativeInteger ,
+		" -036893488147419103232 "^^xsd:negativeInteger ,
+		" 00 "^^xsd:nonNegativeInteger ,
+		" 036893488147419103232 "^^xsd:nonNegativeInteger ,
+		" +01 "^^xsd:positiveInteger ,
+		" 036893488147419103232 "^^xsd:positiveInteger ;
+	<langString> "no language tag"^^rdf:langString ;
+	<time> " P1Y6M0D "^^xsd:duration ,
+		" 12:15:01+00:00 "^^xsd:time ,
+		" 02004-04-12+00:00 "^^xsd:date ;
+	<binary> "A 1 B7 F080"^^xsd:hexBinary ,
+		" Zm 9v  Y m F="^^xsd:base64Binary ;
+	<other> "untyped" ,
+		<uri> ,
+		"notxsd"^^<sometype> ,
+		"unsupported"^^xsd:name
+] .
