@@ -205,6 +205,13 @@ if get_option('utils')
        suite: ['rdf', 'serd'],
        timeout: 240)
 
+  manifest = files('canon' / 'manifest.ttl')
+  base_uri = serd_base + 'canon' + '/'
+  test('canon', run_test_suite,
+       args: script_args + [manifest, base_uri, '--', '-C'],
+       suite: ['rdf', 'serd'],
+       timeout: 240)
+
   ### Run the lax suite with lax parsing enabled as well
   manifest = files('lax/manifest.ttl')
   base_uri = serd_base + 'lax/'
