@@ -5,6 +5,7 @@ serd (1.0.1) unstable;
   * Add extensible logging API
   * Add model for storing statements in memory
   * Add option for writing terse output without newlines
+  * Add support for converting literals to canonical form
   * Add support for parsing variables
   * Add support for validation
   * Add support for writing terse collections
